# qType

./: CHANGELOG.md  README.md  Readme.md  qType.cabal  qType2.cabal
app/: Main.hs
src/Quant/: Algo.hs  Quant.hs
src/Quant/Core/: Basis.hs  Observation.hs  Operator.hs  PA.hs  QR.hs  QV.hs  Value.hs
src/Quant/Gates/: Actions.hs  Circuit.hs  Gates.hs  History.hs  Prefabs.hs  QAct.hs
src/Quant/List/: Key.hs  List.hs  NList.hs  OvLabel.hs  Quoter.hs  SList.hs
src/Quant/Ref/: Observation.hs  Ref.hs
src/Quant/Value/: Basis.hs  Gates.hs  List.hs  Operator.hs  PA.hs  Value.hs
src/Quant/Virt/: Adaptor.hs  Gates.hs  Label.hs  QAction.hs  QState.hs  Value.hs
