cabal-version:      3.0

name:               qType

version:            0.1.0.0

author:             Flávio Borin Júnior

maintainer:         flavioborinjunior@gmail.com

build-type:         Simple


common warnings
    ghc-options: -Wall

executable qType
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.19.1.0

    hs-source-dirs:   app, src

    default-language: Haskell2010
